--- a/contacto.html
+++ b/contacto.html
@@ -61,11 +61,13 @@
                      </div>
                   </div>
                </div>
-            </section>                        <section id="sp-page-title">
+            </section>
+
+            <section id="sp-page-title">
                <div class="row">
                   <div id="sp-logo" class="col-sm-12 col-md-12">
                      <div class="sp-column ">
-                        <div class="logo"><a href="http://cursovirtualdepatentes.com/"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="http://cursovirtualdepatentes.com"></a></div>
+                        <div class="logo"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="#"></div>
                      </div>
                   </div>
                </div>
@@ -89,7 +91,7 @@
                      </div>
                   </div>
                </div>
-            </section>                        
+            </section>
             <header id="sp-header" style="max-width: 1240px; left: auto;">
                <div class="container">
                   <div class="row" style="position: relative;">
@@ -122,7 +124,8 @@
                      </div>
                   </div>
                </div>
-            </header>  
+            </header>   
+
             
             <section id="sp-main-body">
                <div class="container">
