--- a/contenidos.html
+++ b/contenidos.html
@@ -34,7 +34,7 @@
       <script src="./assets/js/jquery.sticky.js" type="text/javascript"></script>
       <script src="./assets/js/main.js" type="text/javascript"></script>
       <script src="./assets/js/frontend-edit.js" type="text/javascript"></script>
-      <script src="https://use.fontawesome.com/9d615b624d.js"></script>      <meta property="og:url" content="http://cursovirtualdepatentes.com/contenidos.php">
+      <script src="https://use.fontawesome.com/9d615b624d.js"></script>      <meta property="og:url" content="./contenidos.html">
       <meta property="og:type" content="article">
       <meta property="og:title" content="Contenidos">
       <meta property="og:description" content="Módulo 1: Introducción a las patentes Módulo 2: Materia patentable y excepciones Módulo 3: Patentes y competitividad Módulo 4: Partes del documento de pate...">
@@ -78,7 +78,7 @@
                   </div>
                </div>
             </section>
-            <a class="facebook" onclick="window.open(&#39;http://www.facebook.com/sharer.php?u=certificacion&#39;,&#39;Facebook&#39;,&#39;width=600,height=300,left=&#39;+(screen.availWidth/2-300)+&#39;,top=&#39;+(screen.availHeight/2-150)+&#39;&#39;); return false;" href="http://www.facebook.com/sharer.php?u=certificacion">
+            <a class="facebook" onclick="window.open('http://www.facebook.com/sharer.php?u=certificacion','Facebook','width=600,height=300,left='+(screen.availWidth/2-300)+',top='+(screen.availHeight/2-150)+''); return false;" href="http://www.facebook.com/sharer.php?u=certificacion">
                <i class="fa fa-facebook"></i>
                </a>
             
@@ -91,14 +91,14 @@
                               <h1 class="sp-module-title">Menu de Módulos</h1>
                               <div class="sp-module-content">
                                  <ul class="nav menu">
-                                    <li class="item-177  parent"><a href="http://cursovirtualdepatentes.com/modulo_01.php"> Módulo 1</a></li>
-                                    <li class="item-178  parent"><a href="http://cursovirtualdepatentes.com/modulo_02.php"> Módulo 2</a></li>
-                                    <li class="item-179  parent"><a href="http://cursovirtualdepatentes.com/modulo_03.php"> Módulo 3</a></li>
-                                    <li class="item-180  parent"><a href="http://cursovirtualdepatentes.com/modulo_04.php"> Módulo 4</a></li>
-                                    <li class="item-181  parent"><a href="http://cursovirtualdepatentes.com/modulo_05.php"> Módulo 5</a></li>
-                                    <li class="item-182  parent"><a href="http://cursovirtualdepatentes.com/modulo_06.php"> Módulo 6</a></li>
-                                    <li class="item-183  parent"><a href="http://cursovirtualdepatentes.com/modulo_07.php"> Módulo 7</a></li>
-                                    <li class="item-184  parent"><a href="http://cursovirtualdepatentes.com/modulo_08.php"> Módulo 8</a></li>
+                                    <li class="item-177  parent"><a href="./modulo_01.html"> Módulo 1</a></li>
+                                    <li class="item-178  parent"><a href="./modulo_02.html"> Módulo 2</a></li>
+                                    <li class="item-179  parent"><a href="./modulo_03.html"> Módulo 3</a></li>
+                                    <li class="item-180  parent"><a href="./modulo_04.html"> Módulo 4</a></li>
+                                    <li class="item-181  parent"><a href="./modulo_05.html"> Módulo 5</a></li>
+                                    <li class="item-182  parent"><a href="./modulo_06.html"> Módulo 6</a></li>
+                                    <li class="item-183  parent"><a href="./modulo_07.html"> Módulo 7</a></li>
+                                    <li class="item-184  parent"><a href="./modulo_08.html"> Módulo 8</a></li>
                                  </ul>
                               </div>
                            </div>
