--- a/certificacion.html
+++ b/certificacion.html
@@ -61,11 +61,12 @@
                      </div>
                   </div>
                </div>
-            </section>                        <section id="sp-page-title">
+            </section>                        
+            <section id="sp-page-title">
                <div class="row">
                   <div id="sp-logo" class="col-sm-12 col-md-12">
                      <div class="sp-column ">
-                        <div class="logo"><a href="http://cursovirtualdepatentes.com/"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="http://cursovirtualdepatentes.com"></a></div>
+                        <div class="logo"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="#"></div>
                      </div>
                   </div>
                </div>
@@ -89,7 +90,7 @@
                      </div>
                   </div>
                </div>
-            </section>                        
+            </section>
             <header id="sp-header" style="max-width: 1240px; left: auto;">
                <div class="container">
                   <div class="row" style="position: relative;">
@@ -122,7 +123,7 @@
                      </div>
                   </div>
                </div>
-            </header>        
+            </header>   
             
             <section id="sp-main-body">
                <div class="container">
@@ -155,7 +156,7 @@
                                           <ul>
                                              <li>
                                                 <div class="facebook" data-toggle="tooltip" data-placement="top" title="" data-original-title="Share On Facebook">
-                                                   <a class="facebook" onclick="window.open('http://www.facebook.com/sharer.php?u=http://cursovirtualdepatentes.com/','Facebook','width=600,height=300,left='+(screen.availWidth/2-300)+',top='+(screen.availHeight/2-150)+''); return false;" href="http://www.facebook.com/sharer.php?u=http://cursovirtualdepatentes.com/">
+                                                   <a class="facebook" onclick="window.open('http://www.facebook.com/sharer.php?u=php/','Facebook','width=600,height=300,left='+(screen.availWidth/2-300)+',top='+(screen.availHeight/2-150)+''); return false;" href="http://www.facebook.com/sharer.php?u=http://cursovirtualdepatentes.com/">
                                                    <i class="fa fa-facebook"></i>
                                                    </a>
                                                 </div>
@@ -214,17 +215,17 @@
       </div>
             <div class="offcanvas-overlay"></div>
       <div class="offcanvas-menu">
-         <a href="http://cursovirtualdepatentes.com/#" class="close-offcanvas"><i class="fa fa-remove"></i></a>
+         <a href="./#" class="close-offcanvas"><i class="fa fa-remove"></i></a>
          <div class="offcanvas-inner">
             <div class="sp-module ">
                <div class="sp-module-content">
                   <ul class="nav menu">
-                     <li class="item-103  current active"><a href="http://cursovirtualdepatentes.com/"> Presentación</a></li>
-                     <li class="item-104  parent"><a href="http://cursovirtualdepatentes.com/contenidos.php"> Contenidos</a></li>
-                     <li class="item-106  parent"><a href="http://cursovirtualdepatentes.com/plana-docente.php"> Plana Docente</a></li>
-                     <li class="item-107"><a href="http://cursovirtualdepatentes.com/contacto.php"> Contáctenos</a></li>
-                     <li class="item-109"><a href="http://cursovirtualdepatentes.com/certificacion.php"> Certificación</a></li>
-                     <li class="item-217"><a href="http://cursovirtualdepatentes.com/faq.php"> Preguntas frecuentes</a></li>
+                     <li class="item-103  current active"><a href="./index.html"> Presentación</a></li>
+                     <li class="item-104  parent"><a href="./contenidos.html"> Contenidos</a></li>
+                     <li class="item-106  parent"><a href="./plana-docente.html"> Plana Docente</a></li>
+                     <li class="item-107"><a href="./contacto.html"> Contáctenos</a></li>
+                     <li class="item-109"><a href="./certificacion.html"> Certificación</a></li>
+                     <li class="item-217"><a href="./faq.html"> Preguntas frecuentes</a></li>
                   </ul>
                </div>
             </div>
