--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
                   </div>
                </div>
             </section>
+            
             <section id="sp-page-title">
                <div class="row">
                   <div id="sp-logo" class="col-sm-12 col-md-12">
                      <div class="sp-column ">
-                        <div class="logo"><a href="./index.html"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="#"></a></div>
+                        <div class="logo"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="#"></div>
                      </div>
                   </div>
                </div>
@@ -147,6 +148,8 @@
                   </div>
                </div>
             </header>
+
+
             <section id="sp-main-body">
                <div class="container">
                   <div class="row">
