--- a/contacto.html
+++ b/contacto.html
@@ -61,13 +61,11 @@
                      </div>
                   </div>
                </div>
-            </section>
-
-            <section id="sp-page-title">
+            </section>                        <section id="sp-page-title">
                <div class="row">
                   <div id="sp-logo" class="col-sm-12 col-md-12">
                      <div class="sp-column ">
-                        <div class="logo"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="#"></div>
+                        <div class="logo"><a href="http://cursovirtualdepatentes.com/"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="http://cursovirtualdepatentes.com"></a></div>
                      </div>
                   </div>
                </div>
@@ -91,7 +89,7 @@
                      </div>
                   </div>
                </div>
-            </section>
+            </section>                        
             <header id="sp-header" style="max-width: 1240px; left: auto;">
                <div class="container">
                   <div class="row" style="position: relative;">
@@ -124,8 +122,7 @@
                      </div>
                   </div>
                </div>
-            </header>   
-
+            </header>  
             
             <section id="sp-main-body">
                <div class="container">
@@ -179,7 +176,12 @@
                                                    </a>
                                                 </div>
                                              </li>
-                                             
+                                             <li>
+                                                <div class="google-plus">
+                                                   <a class="gplus" data-toggle="tooltip" data-placement="top" title="" onclick="window.open('https://plus.google.com/share?url=http://cursovirtualdepatentes.com/','Google plus','width=585,height=666,left='+(screen.availWidth/2-292)+',top='+(screen.availHeight/2-333)+''); return false;" href="https://plus.google.com/share?url=http://cursovirtualdepatentes.com/" data-original-title="Share On Google Plus">
+                                                   <i class="fa fa-google-plus"></i></a>
+                                                </div>
+                                             </li>
                                              <li>
                                                 <div class="linkedin">
                                                    <a class="linkedin" data-toggle="tooltip" data-placement="top" title="" onclick="window.open('http://www.linkedin.com/shareArticle?mini=true&amp;url=http://cursovirtualdepatentes.com/','Linkedin','width=585,height=666,left='+(screen.availWidth/2-292)+',top='+(screen.availHeight/2-333)+''); return false;" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://cursovirtualdepatentes.com/" data-original-title="Share On Linkedin">
