--- a/docentes.html
+++ b/docentes.html
@@ -97,24 +97,23 @@
                            <div class="sp-megamenu-wrapper">
                               <a id="offcanvas-toggler" href="http://cursovirtualdepatentes.com/faq#"><i class="fa fa-bars"></i></a>
                               <ul class="sp-megamenu-parent menu-rotate hidden-sm hidden-xs">
-                                 <li class="sp-menu-item"><a href="./index.html">Presentación</a></li>
+                                 <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/">Presentación</a></li>
+                                <li class="sp-menu-item sp-has-child">
+                                    <a href="http://cursovirtualdepatentes.com/contenidos.php">Contenidos</a> </li>
                                  <li class="sp-menu-item sp-has-child">
-                                    <a href="./contenidos.html">Contenidos</a>
-                                 </li>
-                                 <li class="sp-menu-item sp-has-child">
-                                    <a href="./plana-docente.html">Plana Docente</a>
+                                    <a href="http://cursovirtualdepatentes.com/plana-docente.php">Plana Docente</a>
                                     <div class="sp-dropdown sp-dropdown-main sp-menu-right" style="width: 240px;">
                                        <div class="sp-dropdown-inner">
                                           <ul class="sp-dropdown-items">
-                                             <li class="sp-menu-item"><a href="./docentes.html">Docentes</a></li>
-                                             <li class="sp-menu-item"><a href="./elaboracion.html">Elaboración</a></li>
+                                             <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/docentes.php">Docentes</a></li>
+                                             <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/elaboracion.php">Elaboración</a></li>
                                           </ul>
                                        </div>
                                     </div>
                                  </li>
-                                 <li class="sp-menu-item"><a href="./contacto.html">Contáctenos</a></li>
-                                 <li class="sp-menu-item"><a href="./certificacion.html">Certificación</a></li>
-                                 <li class="sp-menu-item current-item active"><a href="./faq.html">Preguntas frecuentes</a></li>
+                                 <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/contacto.php">Contáctenos</a></li>
+                                 <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/certificacion.php">Certificación</a></li>
+                                 <li class="sp-menu-item current-item active"><a href="http://cursovirtualdepatentes.com/faq.php">Preguntas frecuentes</a></li>
                               </ul>
                            </div>
                         </div>
@@ -166,7 +165,12 @@
                                                    </a>
                                                 </div>
                                              </li>
-
+                                             <li>
+                                                <div class="google-plus">
+                                                   <a class="gplus" data-toggle="tooltip" data-placement="top" title="" onclick="window.open('https://plus.google.com/share?url=http://cursovirtualdepatentes.com/','Google plus','width=585,height=666,left='+(screen.availWidth/2-292)+',top='+(screen.availHeight/2-333)+''); return false;" href="https://plus.google.com/share?url=http://cursovirtualdepatentes.com/" data-original-title="Share On Google Plus">
+                                                   <i class="fa fa-google-plus"></i></a>
+                                                </div>
+                                             </li>
                                              <li>
                                                 <div class="linkedin">
                                                    <a class="linkedin" data-toggle="tooltip" data-placement="top" title="" onclick="window.open('http://www.linkedin.com/shareArticle?mini=true&amp;url=http://cursovirtualdepatentes.com/','Linkedin','width=585,height=666,left='+(screen.availWidth/2-292)+',top='+(screen.availHeight/2-333)+''); return false;" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://cursovirtualdepatentes.com/" data-original-title="Share On Linkedin">
