--- a/modulo_08.html
+++ b/modulo_08.html
@@ -61,9 +61,7 @@
                      </div>
                   </div>
                </div>
-            </section>
-
-            <section id="sp-page-title">
+            </section>            <section id="sp-page-title">
                <div class="row">
                   <div id="sp-logo" class="col-sm-12 col-md-12">
                      <div class="sp-column ">
@@ -72,41 +70,38 @@
                   </div>
                </div>
             </section>
-            <header id="sp-header" style="max-width: 1240px; left: auto;">
+                        <header id="sp-header" style="max-width: 1240px; left: auto;">
                <div class="container">
                   <div class="row" style="position: relative;">
                      <div id="sp-menu" class="col-sm-12 col-md-12" style="position: static;">
                         <div class="sp-column ">
                            <div class="sp-megamenu-wrapper">
-                              <a id="offcanvas-toggler" href="./faq#"><i class="fa fa-bars"></i></a>
+                              <a id="offcanvas-toggler" href="http://cursovirtualdepatentes.com/faq#"><i class="fa fa-bars"></i></a>
                               <ul class="sp-megamenu-parent menu-rotate hidden-sm hidden-xs">
-                                 <li class="sp-menu-item"><a href="./index.html">Presentación</a></li>
+                                 <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/">Presentación</a></li>
+                                <li class="sp-menu-item sp-has-child">
+                                    <a href="http://cursovirtualdepatentes.com/contenidos.php">Contenidos</a> </li>
                                  <li class="sp-menu-item sp-has-child">
-                                    <a href="./contenidos.html">Contenidos</a>
-                                 </li>
-                                 <li class="sp-menu-item sp-has-child">
-                                    <a href="./plana-docente.html">Plana Docente</a>
+                                    <a href="http://cursovirtualdepatentes.com/plana-docente.php">Plana Docente</a>
                                     <div class="sp-dropdown sp-dropdown-main sp-menu-right" style="width: 240px;">
                                        <div class="sp-dropdown-inner">
                                           <ul class="sp-dropdown-items">
-                                             <li class="sp-menu-item"><a href="./docentes.html">Docentes</a></li>
-                                             <li class="sp-menu-item"><a href="./elaboracion.html">Elaboración</a></li>
+                                             <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/docentes.php">Docentes</a></li>
+                                             <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/elaboracion.php">Elaboración</a></li>
                                           </ul>
                                        </div>
                                     </div>
                                  </li>
-                                 <li class="sp-menu-item"><a href="./contacto.html">Contáctenos</a></li>
-                                 <li class="sp-menu-item"><a href="./certificacion.html">Certificación</a></li>
-                                 <li class="sp-menu-item current-item active"><a href="./faq.html">Preguntas frecuentes</a></li>
+                                 <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/contacto.php">Contáctenos</a></li>
+                                 <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/certificacion.php">Certificación</a></li>
+                                 <li class="sp-menu-item current-item active"><a href="http://cursovirtualdepatentes.com/faq.php">Preguntas frecuentes</a></li>
                               </ul>
                            </div>
                         </div>
                      </div>
                   </div>
                </div>
-            </header>           
-            
-            <section id="sp-main-body">
+            </header>            <section id="sp-main-body">
                <div class="container">
                   <div class="row">
                      <div id="sp-left" class="col-sm-3 col-md-3">
@@ -115,14 +110,14 @@
                               <h1 class="sp-module-title">Menu de Módulos</h1>
                               <div class="sp-module-content">
                                  <ul class="nav menu">
-                                    <li class="item-177  parent"><a href="./modulo_01.html"> Módulo 1</a></li>
-                                    <li class="item-178  parent"><a href="./modulo_02.html"> Módulo 2</a></li>
-                                    <li class="item-179  parent"><a href="./modulo_03.html"> Módulo 3</a></li>
-                                    <li class="item-180  parent"><a href="./modulo_04.html"> Módulo 4</a></li>
-                                    <li class="item-181  parent"><a href="./modulo_05.html"> Módulo 5</a></li>
-                                    <li class="item-182  parent"><a href="./modulo_06.html"> Módulo 6</a></li>
-                                    <li class="item-183  parent"><a href="./modulo_07.html"> Módulo 7</a></li>
-                                    <li class="item-184  parent"><a href="./modulo_08.html"> Módulo 8</a></li>
+                                    <li class="item-177  parent"><a href="http://cursovirtualdepatentes.com/modulo_01.php"> Módulo 1</a></li>
+                                    <li class="item-178  parent"><a href="http://cursovirtualdepatentes.com/modulo_02.php"> Módulo 2</a></li>
+                                    <li class="item-179  parent"><a href="http://cursovirtualdepatentes.com/modulo_03.php"> Módulo 3</a></li>
+                                    <li class="item-180  parent"><a href="http://cursovirtualdepatentes.com/modulo_04.php"> Módulo 4</a></li>
+                                    <li class="item-181  parent"><a href="http://cursovirtualdepatentes.com/modulo_05.php"> Módulo 5</a></li>
+                                    <li class="item-182  parent"><a href="http://cursovirtualdepatentes.com/modulo_06.php"> Módulo 6</a></li>
+                                    <li class="item-183  parent"><a href="http://cursovirtualdepatentes.com/modulo_07.php"> Módulo 7</a></li>
+                                    <li class="item-184  parent"><a href="http://cursovirtualdepatentes.com/modulo_08.php"> Módulo 8</a></li>
                                  </ul>
                               </div>
                            </div>
@@ -265,7 +260,12 @@
                                                    </a>
                                                 </div>
                                              </li>
-                                             
+                                             <li>
+                                                <div class="google-plus">
+                                                   <a class="gplus" data-toggle="tooltip" data-placement="top" title="" onclick="window.open('https://plus.google.com/share?url=http://cursovirtualdepatentes.com/','Google plus','width=585,height=666,left='+(screen.availWidth/2-292)+',top='+(screen.availHeight/2-333)+''); return false;" href="https://plus.google.com/share?url=http://cursovirtualdepatentes.com/" data-original-title="Share On Google Plus">
+                                                   <i class="fa fa-google-plus"></i></a>
+                                                </div>
+                                             </li>
                                              <li>
                                                 <div class="linkedin">
                                                    <a class="linkedin" data-toggle="tooltip" data-placement="top" title="" onclick="window.open('http://www.linkedin.com/shareArticle?mini=true&amp;url=http://cursovirtualdepatentes.com/','Linkedin','width=585,height=666,left='+(screen.availWidth/2-292)+',top='+(screen.availHeight/2-333)+''); return false;" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://cursovirtualdepatentes.com/" data-original-title="Share On Linkedin">
