--- a/faq.html
+++ b/faq.html
@@ -61,71 +61,47 @@
                      </div>
                   </div>
                </div>
-            </section>            
-            <section id="sp-page-title">
+            </section>            <section id="sp-page-title">
                <div class="row">
                   <div id="sp-logo" class="col-sm-12 col-md-12">
                      <div class="sp-column ">
-                        <div class="logo"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="#"></div>
+                        <div class="logo"><a href="http://cursovirtualdepatentes.com/"><img class="sp-default-logo" src="./assets/img/Banner-final.png" alt="http://cursovirtualdepatentes.com"></a></div>
                      </div>
                   </div>
                </div>
             </section>
-            <section id="sp-section-3">
-               <div class="container">
-                  <div class="row">
-                     <div id="sp-slider" class="col-sm-12 col-md-12">
-                        <div class="sp-column ">
-                           <div class="sp-module ">
-                              <div class="sp-module-content">
-                                 <div class="bannergroup">
-                                    <div class="banneritem">
-                                       <img src="./assets/img/FOTO-PORTADA.jpg" alt="slide">
-                                       <div class="clr"></div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </section>
-            <header id="sp-header" style="max-width: 1240px; left: auto;">
+                        <header id="sp-header" style="max-width: 1240px; left: auto;">
                <div class="container">
                   <div class="row" style="position: relative;">
                      <div id="sp-menu" class="col-sm-12 col-md-12" style="position: static;">
                         <div class="sp-column ">
                            <div class="sp-megamenu-wrapper">
-                              <a id="offcanvas-toggler" href="./faq#"><i class="fa fa-bars"></i></a>
+                              <a id="offcanvas-toggler" href="http://cursovirtualdepatentes.com/faq#"><i class="fa fa-bars"></i></a>
                               <ul class="sp-megamenu-parent menu-rotate hidden-sm hidden-xs">
-                                 <li class="sp-menu-item"><a href="./index.html">Presentación</a></li>
+                                 <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/">Presentación</a></li>
+                                <li class="sp-menu-item sp-has-child">
+                                    <a href="http://cursovirtualdepatentes.com/contenidos.php">Contenidos</a> </li>
                                  <li class="sp-menu-item sp-has-child">
-                                    <a href="./contenidos.html">Contenidos</a>
-                                 </li>
-                                 <li class="sp-menu-item sp-has-child">
-                                    <a href="./plana-docente.html">Plana Docente</a>
+                                    <a href="http://cursovirtualdepatentes.com/plana-docente.php">Plana Docente</a>
                                     <div class="sp-dropdown sp-dropdown-main sp-menu-right" style="width: 240px;">
                                        <div class="sp-dropdown-inner">
                                           <ul class="sp-dropdown-items">
-                                             <li class="sp-menu-item"><a href="./docentes.html">Docentes</a></li>
-                                             <li class="sp-menu-item"><a href="./elaboracion.html">Elaboración</a></li>
+                                             <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/docentes.php">Docentes</a></li>
+                                             <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/elaboracion.php">Elaboración</a></li>
                                           </ul>
                                        </div>
                                     </div>
                                  </li>
-                                 <li class="sp-menu-item"><a href="./contacto.html">Contáctenos</a></li>
-                                 <li class="sp-menu-item"><a href="./certificacion.html">Certificación</a></li>
-                                 <li class="sp-menu-item current-item active"><a href="./faq.html">Preguntas frecuentes</a></li>
+                                 <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/contacto.php">Contáctenos</a></li>
+                                 <li class="sp-menu-item"><a href="http://cursovirtualdepatentes.com/certificacion.php">Certificación</a></li>
+                                 <li class="sp-menu-item current-item active"><a href="http://cursovirtualdepatentes.com/faq.php">Preguntas frecuentes</a></li>
                               </ul>
                            </div>
                         </div>
                      </div>
                   </div>
                </div>
-            </header>              
-            
-            <section id="sp-main-body">
+            </header>            <section id="sp-main-body">
                <div class="container">
                   <div class="row">
                      <div id="sp-component" class="col-sm-12 col-md-12">
@@ -187,7 +163,12 @@
                                                    </a>
                                                 </div>
                                              </li>
-
+                                             <li>
+                                                <div class="google-plus">
+                                                   <a class="gplus" data-toggle="tooltip" data-placement="top" title="" onclick="window.open('https://plus.google.com/share?url=http://cursovirtualdepatentes.com/','Google plus','width=585,height=666,left='+(screen.availWidth/2-292)+',top='+(screen.availHeight/2-333)+''); return false;" href="https://plus.google.com/share?url=http://cursovirtualdepatentes.com/" data-original-title="Share On Google Plus">
+                                                   <i class="fa fa-google-plus"></i></a>
+                                                </div>
+                                             </li>
                                              <li>
                                                 <div class="linkedin">
                                                    <a class="linkedin" data-toggle="tooltip" data-placement="top" title="" onclick="window.open('http://www.linkedin.com/shareArticle?mini=true&amp;url=http://cursovirtualdepatentes.com/','Linkedin','width=585,height=666,left='+(screen.availWidth/2-292)+',top='+(screen.availHeight/2-333)+''); return false;" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://cursovirtualdepatentes.com/" data-original-title="Share On Linkedin">
