--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
       <script src="./assets/js/main.js" type="text/javascript"></script>
       <script src="./assets/js/frontend-edit.js" type="text/javascript"></script>
       <script src="https://use.fontawesome.com/9d615b624d.js"></script>
+      <script src="./assets/js/ajax
+.js" type="text/javascript"></script>
       <meta property="og:url" content="#">
       <meta property="og:type" content="article">
       <meta property="og:title" content="Presentación del Curso">
@@ -125,7 +127,7 @@
                               <ul class="sp-megamenu-parent menu-rotate hidden-sm hidden-xs">
                                  <li class="sp-menu-item"><a href="./index.html">Presentación</a></li>
                                  <li class="sp-menu-item sp-has-child">
-                                    <a href="./contenidos.html">Contenidos</a>
+                                    <a onclick="textAjax()" style="cursor: pointer;">Contenidos</a>
                                  </li>
                                  <li class="sp-menu-item sp-has-child">
                                     <a href="./plana-docente.html">Plana Docente</a>
@@ -151,7 +153,7 @@
 
 
             <section id="sp-main-body">
-               <div class="container">
+               <div class="container" id="container">
                   <div class="row">
                      <div id="sp-component" class="col-sm-12 col-md-12">
                         <div class="sp-column ">
