--- a/modulo_01.html
+++ b/modulo_01.html
@@ -63,7 +63,6 @@
                   </div>
                </div>
             </section>
-
             <section id="sp-page-title">
                <div class="row">
                   <div id="sp-logo" class="col-sm-12 col-md-12">
@@ -105,8 +104,7 @@
                      </div>
                   </div>
                </div>
-            </header>
-
+            </header> 
             <section id="sp-main-body">
                <div class="container">
                   <div class="row">
@@ -116,14 +114,14 @@
                               <h1 class="sp-module-title">Menu de Módulos</h1>
                               <div class="sp-module-content">
                                  <ul class="nav menu">
-                                    <li class="item-177  parent"><a href="./modulo_01.html"> Módulo 1</a></li>
-                                    <li class="item-178  parent"><a href="./modulo_02.html"> Módulo 2</a></li>
-                                    <li class="item-179  parent"><a href="./modulo_03.html"> Módulo 3</a></li>
-                                    <li class="item-180  parent"><a href="./modulo_04.html"> Módulo 4</a></li>
-                                    <li class="item-181  parent"><a href="./modulo_05.html"> Módulo 5</a></li>
-                                    <li class="item-182  parent"><a href="./modulo_06.html"> Módulo 6</a></li>
-                                    <li class="item-183  parent"><a href="./modulo_07.html"> Módulo 7</a></li>
-                                    <li class="item-184  parent"><a href="./modulo_08.html"> Módulo 8</a></li>
+                                    <li class="item-177  parent"><a href="http://cursovirtualdepatentes.com/modulo_01.php"> Módulo 1</a></li>
+                                    <li class="item-178  parent"><a href="http://cursovirtualdepatentes.com/modulo_02.php"> Módulo 2</a></li>
+                                    <li class="item-179  parent"><a href="http://cursovirtualdepatentes.com/modulo_03.php"> Módulo 3</a></li>
+                                    <li class="item-180  parent"><a href="http://cursovirtualdepatentes.com/modulo_04.php"> Módulo 4</a></li>
+                                    <li class="item-181  parent"><a href="http://cursovirtualdepatentes.com/modulo_05.php"> Módulo 5</a></li>
+                                    <li class="item-182  parent"><a href="http://cursovirtualdepatentes.com/modulo_06.php"> Módulo 6</a></li>
+                                    <li class="item-183  parent"><a href="http://cursovirtualdepatentes.com/modulo_07.php"> Módulo 7</a></li>
+                                    <li class="item-184  parent"><a href="http://cursovirtualdepatentes.com/modulo_08.php"> Módulo 8</a></li>
                                  </ul>
                               </div>
                            </div>
@@ -204,14 +202,14 @@
                                  <p>Haga clic a la respuesta que crea conveniente</p>
                                  <p>&nbsp;</p>
                                  <p><strong>1. Señale cada cuanto se renuevan las patentes</strong></p>
-                                 <div onclick="alert('INCORRECTO')">a. Cada año.</div>
-                                 <div onclick="alert('INCORRECTO')">b. Cada 20 años.</div>
-                                 <div onclick="alert('Las patentes son instrumentos con una vigencia de tiempo limitada. Luego de transcurrido dicho periodo (10 años para patentes de modelo de utilidad y 20 años para patentes de invención) el titular dejará de ser el dueño exclusivo de la invención protegida y cualquier tercero podrá replicarla, fabricarla o comercializarla sin previa autorización. ')">c. Ninguna de las anteriores.</div>
+                                 <div onclick="alert(&#39;INCORRECTO&#39;)">a. Cada año.</div>
+                                 <div onclick="alert(&#39;INCORRECTO&#39;)">b. Cada 20 años.</div>
+                                 <div onclick="alert(&#39;Las patentes son instrumentos con una vigencia de tiempo limitada. Luego de transcurrido dicho periodo (10 años para patentes de modelo de utilidad y 20 años para patentes de invención) el titular dejará de ser el dueño exclusivo de la invención protegida y cualquier tercero podrá replicarla, fabricarla o comercializarla sin previa autorización. &#39;)">c. Ninguna de las anteriores.</div>
                                  <p>&nbsp;</p>
                                  <p><strong>2. El requisito (o criterio) de novedad que debe satisfacer una patente debe tener alcance:</strong></p>
-                                 <div onclick="alert('INCORRECTO')">a. Regional.</div>
-                                 <div onclick="alert('El análisis favorable de una patente requiere que la novedad de un producto sea a nivel mundial. Esto quiere decir que, si otra persona ya desarrolló, comercializó o dio a conocer la misma invención que nosotros en algún país en el mundo antes que nosotros, nuestra invención ya no podrá ser patentada en Perú o en cualquier otro país porque no superará el criterio de novedad (es decir, ya no se considerará como nueva). ')">b. Mundial.</div>
-                                 <div onclick="alert('INCORRECTO ')">c. Local.</div>
+                                 <div onclick="alert(&#39;INCORRECTO&#39;)">a. Regional.</div>
+                                 <div onclick="alert(&#39;El análisis favorable de una patente requiere que la novedad de un producto sea a nivel mundial. Esto quiere decir que, si otra persona ya desarrolló, comercializó o dio a conocer la misma invención que nosotros en algún país en el mundo antes que nosotros, nuestra invención ya no podrá ser patentada en Perú o en cualquier otro país porque no superará el criterio de novedad (es decir, ya no se considerará como nueva). &#39;)">b. Mundial.</div>
+                                 <div onclick="alert(&#39;INCORRECTO &#39;)">c. Local.</div>
                               </div>
                               <div class="article-footer-wrap">
                                  <div class="article-footer-top">
