--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                               <ul class="sp-megamenu-parent menu-rotate hidden-sm hidden-xs">
                                  <li class="sp-menu-item"><a href="./index.html">Presentación</a></li>
                                  <li class="sp-menu-item sp-has-child">
-                                    <a onclick="textAjax()" style="cursor: pointer;">Contenidos</a>
+                                    <a onclick="htmlAjax('contenidosh.html','container')" style="cursor: pointer;">Contenidos</a>
                                  </li>
                                  <li class="sp-menu-item sp-has-child">
                                     <a href="./plana-docente.html">Plana Docente</a>
@@ -244,7 +244,7 @@
                <div class="sp-module-content">
                   <ul class="nav menu">
                      <li class="item-103  current active"><a href="#"> Presentación</a></li>
-                     <li class="item-104  parent"><a href="./contenidos.html"> Contenidos</a></li>
+                     <li class="item-104  parent"><a onclick="textAjax();" style="cursor: pointer;"> Contenidos</a></li>
                      <li class="item-106  parent"><a href="./plana-docente.html"> Plana Docente</a></li>
                      <li class="item-107"><a href="http://cursovirtualdepatentes.com/contacto.php"> Contáctenos</a></li>
                      <li class="item-109"><a href="http://cursovirtualdepatentes.com/certificacion.php"> Certificación</a></li>
