--- a/modulo_05.html
+++ b/modulo_05.html
@@ -110,14 +110,14 @@
                               <h1 class="sp-module-title">Menu de Módulos</h1>
                               <div class="sp-module-content">
                                  <ul class="nav menu">
-                                    <li class="item-177  parent"><a href="http://cursovirtualdepatentes.com/modulo_01.php"> Módulo 1</a></li>
-                                    <li class="item-178  parent"><a href="http://cursovirtualdepatentes.com/modulo_02.php"> Módulo 2</a></li>
-                                    <li class="item-179  parent"><a href="http://cursovirtualdepatentes.com/modulo_03.php"> Módulo 3</a></li>
-                                    <li class="item-180  parent"><a href="http://cursovirtualdepatentes.com/modulo_04.php"> Módulo 4</a></li>
-                                    <li class="item-181  parent"><a href="http://cursovirtualdepatentes.com/modulo_05.php"> Módulo 5</a></li>
-                                    <li class="item-182  parent"><a href="http://cursovirtualdepatentes.com/modulo_06.php"> Módulo 6</a></li>
-                                    <li class="item-183  parent"><a href="http://cursovirtualdepatentes.com/modulo_07.php"> Módulo 7</a></li>
-                                    <li class="item-184  parent"><a href="http://cursovirtualdepatentes.com/modulo_08.php"> Módulo 8</a></li>
+                                    <li class="item-177  parent"><a href="./modulo_01.html"> Módulo 1</a></li>
+                                    <li class="item-178  parent"><a href="./modulo_02.html"> Módulo 2</a></li>
+                                    <li class="item-179  parent"><a href="./modulo_03.html"> Módulo 3</a></li>
+                                    <li class="item-180  parent"><a href="./modulo_04.html"> Módulo 4</a></li>
+                                    <li class="item-181  parent"><a href="./modulo_05.html"> Módulo 5</a></li>
+                                    <li class="item-182  parent"><a href="./modulo_06.html"> Módulo 6</a></li>
+                                    <li class="item-183  parent"><a href="./modulo_07.html"> Módulo 7</a></li>
+                                    <li class="item-184  parent"><a href="./modulo_08.html"> Módulo 8</a></li>
                                  </ul>
                               </div>
                            </div>
