--- a/faq.html
+++ b/faq.html
@@ -215,12 +215,12 @@
             <div class="sp-module ">
                <div class="sp-module-content">
                   <ul class="nav menu">
-                     <li class="item-103  current active"><a href="http://cursovirtualdepatentes.com/"> Presentación</a></li>
-                     <li class="item-104  parent"><a href="http://cursovirtualdepatentes.com/contenidos.php"> Contenidos</a></li>
-                     <li class="item-106  parent"><a href="http://cursovirtualdepatentes.com/plana-docente.php"> Plana Docente</a></li>
-                     <li class="item-107"><a href="http://cursovirtualdepatentes.com/contacto.php"> Contáctenos</a></li>
-                     <li class="item-109"><a href="http://cursovirtualdepatentes.com/certificacion.php"> Certificación</a></li>
-                     <li class="item-217"><a href="http://cursovirtualdepatentes.com/faq.php"> Preguntas frecuentes</a></li>
+                     <li class="item-103  current active"><a href="./index.html"> Presentación</a></li>
+                     <li class="item-104  parent"><a href="./contenidos.html"> Contenidos</a></li>
+                     <li class="item-106  parent"><a href="./plana-docente.html"> Plana Docente</a></li>
+                     <li class="item-107"><a href="./contacto.html"> Contáctenos</a></li>
+                     <li class="item-109"><a href="./certificacion.html"> Certificación</a></li>
+                     <li class="item-217"><a href="./faq.html"> Preguntas frecuentes</a></li>
                   </ul>
                </div>
             </div>
