--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
                               <ul class="sp-megamenu-parent menu-rotate hidden-sm hidden-xs">
                                  <li class="sp-menu-item"><a href="./index.html">Presentación</a></li>
                                  <li class="sp-menu-item sp-has-child">
-                                    <a onclick="htmlAjax('contenidosh.html','container')" style="cursor: pointer;">Contenidos</a>
+                                    <a onclick="htmlAjax('contenidosh.html','container')">Contenidos</a>
                                  </li>
                                  <li class="sp-menu-item sp-has-child">
                                     <a href="./plana-docente.html">Plana Docente</a>
                                     <div class="sp-dropdown sp-dropdown-main sp-menu-right" style="width: 240px;">
                                        <div class="sp-dropdown-inner">
                                           <ul class="sp-dropdown-items">
-                                             <li class="sp-menu-item"><a href="./docentes.html">Docentes</a></li>
-                                             <li class="sp-menu-item"><a href="./elaboracion.html">Elaboración</a></li>
+                                             <li class="sp-menu-item"><a onclick="htmlAjax('docentes.html','container')">Docentes</a></li>
+                                             <li class="sp-menu-item"><a onclick="htmlAjax('elaboracion.html','container')">Elaboración</a></li>
                                           </ul>
                                        </div>
                                     </div>
@@ -243,8 +243,8 @@
             <div class="sp-module ">
                <div class="sp-module-content">
                   <ul class="nav menu">
-                     <li class="item-103  current active"><a href="./index.html"> Presentación</a></li>
-                     <li class="item-104  parent"><a href="./contenidos.html"> Contenidos</a></li>
+                     <li class="item-103  current active"><a href="./index.html" > Presentación</a></li>
+                     <li class="item-104  parent"><a onclick="htmlAjax('contenidosh.html','container')"> Contenidos</a></li>
                      <li class="item-106  parent"><a href="./plana-docente.html"> Plana Docente</a></li>
                      <li class="item-107"><a href="./contacto.html"> Contáctenos</a></li>
                      <li class="item-109"><a href="./certificacion.html"> Certificación</a></li>
