--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                     <a onclick="htmlAjax('contenidosh.html','container')">Contenidos</a>
                                  </li>
                                  <li class="sp-menu-item sp-has-child">
-                                    <a href="./plana-docente.html">Plana Docente</a>
+                                    <a onclick="htmlAjax('plana-docente.html','container')">Plana Docente</a>
                                     <div class="sp-dropdown sp-dropdown-main sp-menu-right" style="width: 240px;">
                                        <div class="sp-dropdown-inner">
                                           <ul class="sp-dropdown-items">
@@ -140,8 +140,8 @@
                                        </div>
                                     </div>
                                  </li>
-                                 <li class="sp-menu-item"><a href="./contacto.html">Contáctenos</a></li>
-                                 <li class="sp-menu-item"><a href="./certificacion.html">Certificación</a></li>
+                                 <li class="sp-menu-item"><a onclick="htmlAjax('contacto.html','container')">Contáctenos</a></li>
+                                 <li class="sp-menu-item"><a onclick="htmlAjax('certificacion.html','container')">Certificación</a></li>
                                  <li class="sp-menu-item current-item active"><a href="./faq.html">Preguntas frecuentes</a></li>
                               </ul>
                            </div>
