--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                            <div class="sp-megamenu-wrapper">
                               <a id="offcanvas-toggler" href="./faq#"><i class="fa fa-bars"></i></a>
                               <ul class="sp-megamenu-parent menu-rotate hidden-sm hidden-xs">
-                                 <li class="sp-menu-item"><a href="./index.html">Presentación</a></li>
+                                 <li class="sp-menu-item"><a href=".">Presentación</a></li>
                                  <li class="sp-menu-item sp-has-child">
-                                    <a onclick="htmlAjax('contenidosh.html','container')">Contenidos</a>
+                                    <a onclick="htmlAjax('contenidos.html','container')">Contenidos</a>
                                  </li>
                                  <li class="sp-menu-item sp-has-child">
                                     <a onclick="htmlAjax('plana-docente.html','container')">Plana Docente</a>
@@ -142,7 +142,7 @@
                                  </li>
                                  <li class="sp-menu-item"><a onclick="htmlAjax('contacto.html','container')">Contáctenos</a></li>
                                  <li class="sp-menu-item"><a onclick="htmlAjax('certificacion.html','container')">Certificación</a></li>
-                                 <li class="sp-menu-item current-item active"><a href="./faq.html">Preguntas frecuentes</a></li>
+                                 <li class="sp-menu-item current-item active"><a onclick="htmlAjax('faq.html','container')">Preguntas frecuentes</a></li>
                               </ul>
                            </div>
                         </div>
@@ -243,12 +243,12 @@
             <div class="sp-module ">
                <div class="sp-module-content">
                   <ul class="nav menu">
-                     <li class="item-103  current active"><a href="./index.html" > Presentación</a></li>
-                     <li class="item-104  parent"><a onclick="htmlAjax('contenidosh.html','container')"> Contenidos</a></li>
-                     <li class="item-106  parent"><a href="./plana-docente.html"> Plana Docente</a></li>
-                     <li class="item-107"><a href="./contacto.html"> Contáctenos</a></li>
-                     <li class="item-109"><a href="./certificacion.html"> Certificación</a></li>
-                     <li class="item-217"><a href="./faq.html"> Preguntas frecuentes</a></li>
+                     <li class="item-103  current active"><a href="." > Presentación</a></li>
+                     <li class="item-104  parent"><a onclick="htmlAjax('contenidos.html','container')"> Contenidos</a></li>
+                     <li class="item-106  parent"><a onclick="htmlAjax('plana-docente.html','container')"> Plana Docente</a></li>
+                     <li class="item-107"><a onclick="htmlAjax('contacto.html','container')"> Contáctenos</a></li>
+                     <li class="item-109"><a onclick="htmlAjax('certificacion.html','container')"> Certificación</a></li>
+                     <li class="item-217"><a onclick="htmlAjax('faq.html','container')"> Preguntas frecuentes</a></li>
                   </ul>
                </div>
             </div>
